Desktop/ticket hub/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-backend-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: ticket-backend
