Desktop/ticket hub/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-frontend-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: ticket-frontend
